--- a/references.bib
+++ b/references.bib
@@ -311,3 +311,30 @@ author = {Thiago Christiano Silva and Liang Zhao},
   volume = {69},
   pages = {21-26},
   year = {2001}}
+
+@article{Friedman2001,
+author = {Jerome H. Friedman},
+title = {{Greedy function approximation: A gradient boosting machine.}},
+volume = {29},
+journal = {The Annals of Statistics},
+number = {5},
+publisher = {Institute of Mathematical Statistics},
+pages = {1189 -- 1232},
+keywords = {boosting, decision trees, Function estimation, robust nonparametric regression},
+year = {2001},
+doi = {10.1214/aos/1013203451},
+URL = {https://doi.org/10.1214/aos/1013203451}
+}
+
+@inproceedings{Vapnik2015,
+author="Vapnik, Vladimir Naumovich and Izmailov, Rauf",
+editor="Gammerman, Alexander and Vovk, Vladimir and Papadopoulos, Harris",
+title="Learning with Intelligent Teacher: Similarity Control and Knowledge Transfer",
+booktitle="Statistical Learning and Data Sciences",
+year="2015",
+publisher="Springer International Publishing",
+address="Cham",
+pages="3--32",
+abstract="This paper introduces an advanced setting of machine learning problem in which an Intelligent Teacher is involved. During training stage, Intelligent Teacher provides Student with information that contains, along with classification of each example, additional privileged information (explanation) of this example. The paper describes two mechanisms that can be used for significantly accelerating the speed of Student's training: (1) correction of Student's concepts of similarity between examples, and (2) direct Teacher-Student knowledge transfer.",
+isbn="978-3-319-17091-6"
+}
