Working on preliminaries.

--- a/data.tex
+++ b/data.tex
@@ -14,28 +14,35 @@
 A useful start point for someone studying data science is the definition of the term
 itself.
 
-% \begin{mainbox}{Chapter remarks}
-%   \boxsubtitle{Context}
-%
-%   \begin{itemize}
-%     \item \dots
-%   \end{itemize}
-%
-%   \boxsubtitle{Objectives}
-%
-%   \begin{itemize}
-%     \item Understand the definition of data science.
-%     \item Understand the main types of data.
-%   \end{itemize}
-%
-%   \boxsubtitle{Takeways}
-%
-%   \begin{itemize}
-%     \item Data science is a new science.
-%     \item Data science is the study of computational methods to extract knowledge from
-%       measurable phenomena.
-%   \end{itemize}
-% \end{mainbox}
+\begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+\end{mainbox}
+
+{}
+\clearpage
 
 For \textcite{Zumel2019}, \emph{``data science is a cross-disciplinary practice that draws
 on methods from data engineering, descriptive statistics, data mining, machine learning,
