--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -7,8 +7,23 @@
 
 Foundamental concepts in data science come from a variety of fields, including
 mathematics, statistics, computer science, optimization theory, and information theory.
-This chapter provides a brief overview of the computational, mathematical and statistical
-concepts that are used in the rest of the book.
+This chapter provides a brief overview of the main computational, mathematical and statistical
+concepts in data science.
+
+The goal is not to provide a comprehensive treatment of these topics, but to consolidate
+notations and definitions that are used throughout the book.  The reader is encouraged to
+consult the references provided at the end of each topic for a more in-depth treatment.
+Statisticians with strong programming background and computer scientists with strong
+statistics background will probably not find much new here.
+
+I first introduce the main concepts in algorithms and data structures, which are the
+building blocks of computational thinking.  Then, I present the basic concepts in set
+theory and linear algebra, which are important mathematical foundations for data science.
+Finally, I introduce the main concepts in probability theory, the cornerstone of
+statistical learning and inference.
+
+If your are familiar with these topics, you can safely skip this chapter.  Otherwise, I
+encourage you to read it carefully, as it will help you understand the rest of the book.
 
 \begin{mainbox}{Chapter remarks}
 
@@ -21,19 +36,23 @@ concepts that are used in the rest of the book.
   \boxsubtitle{Context}
 
   \begin{itemize}
-    \item \dots
+    \item Data science relies on a variety of mathematical and computational concepts.
+    \item The main concepts are algorithms, data structures, set theory, linear algebra,
+      and probability theory.
   \end{itemize}
 
   \boxsubtitle{Objectives}
 
   \begin{itemize}
-    \item \dots
+    \item Introduce a brief overview of the main computational, mathematical and
+      statistical concepts in data science.
+    \item Consolidate notations and definitions that are used throughout the book.
   \end{itemize}
 
   \boxsubtitle{Takeways}
 
   \begin{itemize}
-    \item \dots
+    \item Computational and mathematical background is essential for data science.
   \end{itemize}
 \end{mainbox}
 
@@ -46,6 +65,9 @@ Algorithms are step-by-step procedures for solving a problem.  They are used to
 manipulate data structures, which are ways of organizing data to solve problems.
 They are realized in programming languages, which are formal languages that can be used
 to express algorithms.
+
+My suggestion of a comprehensive book about algorithms and data structures is
+\textcite{Cormen2022}\footfullcite{Cormen2022}.
 
 \subsection{Algoritmic paradigms}
 
