--- a/references.bib
+++ b/references.bib
@@ -338,3 +338,13 @@ pages="3--32",
 abstract="This paper introduces an advanced setting of machine learning problem in which an Intelligent Teacher is involved. During training stage, Intelligent Teacher provides Student with information that contains, along with classification of each example, additional privileged information (explanation) of this example. The paper describes two mechanisms that can be used for significantly accelerating the speed of Student's training: (1) correction of Student's concepts of similarity between examples, and (2) direct Teacher-Student knowledge transfer.",
 isbn="978-3-319-17091-6"
 }
+
+@book{Cormen2022,
+  author = {Thomas H. Cormen and Charles E. Leiserson and Ronald L. Rivest and Clifford Stein},
+  title = {Introduction to Algorithms},
+  edition = {4},
+  year = {2022},
+  publisher = {The MIT Press},
+  isbn = {9780262046305},
+  pages = {1312},
+}
